<resources>
  <string name="app_name">Medical 4100</string>
  <string name="pharmacy">pharmacy</string>
  <string name="general_practitioner">General Practitioner</string>
  <string name="pulmonologist">pulmonologist</string>
  <string name="dermatologist">Dermatologist</string>
  <string name="orthopedic">Orthopedic</string>
  <string name="gastroenterologist">Gastroenterologist</string>
  <string name="otolaryngologist">Otolaryngologist</string>
  <string name="dentiste">Dentiste</string>
  <string name="app_description">Medenine Medical Contact</string>
</resources>
