<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.MainActivity">

  <View
    android:id="@+id/bg_top_header"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/ic_bg_topheader"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/user_photo"
    android:layout_width="71dp"
    android:layout_height="71dp"
    android:layout_marginStart="26dp"
    android:layout_marginTop="24dp"
    android:src="@drawable/ic_app_ic"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/user_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginTop="32dp"
    android:text="@string/app_name"
    android:textColor="#ffffff"
    android:textSize="20sp"
    app:layout_constraintStart_toEndOf="@id/user_photo"

    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/user_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginTop="32dp"
    android:text="@string/app_description"
    android:textColor="#ffffff"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@id/user_photo"
    app:layout_constraintTop_toTopOf="@id/user_name" />

  <GridLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="110dp"
    android:layout_marginBottom="60dp"
    android:alignmentMode="alignMargins"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:padding="14dp"
    android:rowCount="3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="@id/bg_top_header"
    app:layout_constraintVertical_bias="0.0"
    app:layout_editor_absoluteX="0dp">

    <androidx.cardview.widget.CardView
      android:id="@+id/pharmacy_card"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/pharmacy" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/pharmacy"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:id="@+id/generaliste_card"

      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/doctor" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:gravity="center"
          android:text="@string/general_practitioner"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:id="@+id/pulmo_card"
      android:onClick="cardClicked"

      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/lung" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/pulmonologist"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      app:cardCornerRadius="8dp"
      android:onClick="cardClicked"
      android:id="@+id/skin_card"

      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/skin" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/dermatologist"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      android:id="@+id/bone_card"

      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/bone" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/orthopedic"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      android:id="@+id/gastro_card"

      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/gastroenterologist" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/gastroenterologist"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      android:id="@+id/ORL_card"

      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/nose" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/otolaryngologist"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_rowWeight="1"
      android:layout_columnWeight="1"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/cardColor"
      android:onClick="cardClicked"
      android:id="@+id/dentiste_card"

      app:cardCornerRadius="8dp"
      app:cardElevation="6dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/tooth" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/mo_re"
          android:text="@string/dentiste"
          android:textColor="@color/textcardColor"
          android:textSize="14sp"
          android:textStyle="bold" />
      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
